<resources>
    <string name="app_name">Basket Together</string>
    <string name="facebook_app_id">745897808937595</string>

    <string name="title_activity_recruit_post_regist">모집 글 등록</string>
    <string name="title_activity_recruit_post_list">팀 모집글 목록</string>
    <string name="title_activity_recruit_post_regist_map">농구장 위치 지정</string>
    <string name="title_activity_recruit_post_detail">팀 모집글 상세</string>

    <string name="prompt_user_id">아이디</string>
    <string name="prompt_password">비밀번호</string>
    <string name="prompt_password_re">비밀번호 재입력</string>
    <string name="prompt_nickname">닉네임</string>
    <string name="action_sign_up_short">가입</string>

    <string name="action_sign_up">회원가입</string>
    <string name="prompt_mobile_no">휴대폰 번호</string>
    <string name="error_not_input_id">아이디를 입력해 주세요.</string>
    <string name="error_not_input_pwd">비밀번호를 입력해 주세요.</string>
    <string name="error_not_input_pwd_re">비밀번호를 한번 더 입력해 주세요.</string>
    <string name="error_not_input_nickname">닉네임을 입력해 주세요.</string>
    <string name="error_not_input_mobile_no">휴대폰 번호를 입력해 주세요.</string>
    <string name="error_not_equal_pw_re">비밀번호 확인이 일치하지 않습니다.</string>
    <string name="post_title">글 제목</string>
    <string name="post_content">내용을 입력하세요.</string>
    <string name="complete">완료</string>
    <string name="regist">등록</string>

    <string name="error_pwd_minimum_char">비밀번호는 최소 8자리여야 합니다.</string>
    <string name="login">로그인</string>
    <string name="attender_count">참가 인원</string>
    <string name="recruit_count">모집 인원</string>
    <string name="request_attend">참가 신청</string>
    <string name="recruit_time">모임 시간</string>
    <string name="recruit_place">모임 장소</string>
    <string name="location_check">위치 확인</string>
    <string name="comment_input">댓글을 입력하세요.</string>
    <string name="error_login">로그인에 실패하였습니다.\\n다시 시도해주세요.</string>
    <string name="error_regist_comment">댓글등록에 실패했습니다.</string>
    <string name="succ_recruit_req_attend">참가신청 되었습니다.</string>
    <string name="request_attend_cancel">참가 신청 취소</string>
    <string name="succ_recruit_req_attend_canceled">참가 신청 취소되었습니다.</string>
    <string name="not_exist_comment">등록된 댓글이 없습니다.</string>
    <string name="edit">수정</string>
    <string name="delete">삭제</string>
    <string name="confirm_delete_this_recruit_post">이 모집글을 삭제하시겠습니까?</string>
    <string name="request_access_location_permission">사용자의 위치정보에 접근하려 합니다.</string>
    <string name="error_require_access_location_permission">지도에 접근하기 위해서 위치액세스 권한을 허용해야합니다.</string>
    <string name="error_not_picked_place">화면을 클릭하여 농구장 위치를 지정해주세요.</string>
    <string name="error_not_input_post_title">글 제목을 입력해주세요.</string>
    <string name="error_not_input_post_content">글 내용을 입력해주세요.</string>
    <string name="error_not_input_court_place">농구장의 위치를 지정해주세요.</string>
    <string name="error_ealier_than_today">오늘 이전의 날짜는 선택할 수 없습니다.</string>
    <string name="detail_address">상세 주소</string>
    <string name="hint_time_pick">시간을 지정해주세요.</string>
    <string name="hint_place_pick">농구장 위치를 지정해주세요.</string>
    <string name="view_court_location">농구장 위치 확인</string>
    <string name="logout">로그아웃</string>
    <string name="edit_user_info">정보 수정</string>
    <string name="title_activity_user_profile">유저 프로필</string>
    <string name="title_activity_user_profile_edit">프로필 수정</string>
    <string name="prompt_phone_num">핸드폰</string>
    <string name="request_write_storage_permission">기기의 사진에 접근하려 합니다.</string>
    <string name="error_require_write_storage_permission">저장공간 접근 권한이 필요합니다.</string>

</resources>
